<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="app_name">AireTalk</string>
    <string name="contacts">Contacts</string>
    <string name="edit">Edit</string>
    <string name="sendmsg">Send</string>
    <string name="textinput">Text Message</string>
    <string name="nonetwork">No network, please try again…</string>
    <string name="poornetwork">Alert!\nAireTalk connection may be poor</string>
    <string name="network_prompt">Your Network is poor or has changed!\nCheck your connection.</string>
    <string name="OK">OK</string>
    <string name="next">Next</string>
    <string name="newmessage">new message</string>
    <string name="messages">Messages</string>
    <string name="register">Register</string>
    <string name="login">Log In</string>
    <string name="cancel">Cancel</string>
    <string name="clear">Clear</string>
    <string name="compose_new">New Message</string>
    <string name="sendto">To:</string>
    <string name="attachment">attachment</string>
    <string name="done">Done</string>
    <string name="recording_vmemo">Recording…</string>
    <string name="recording_timeup">time\'s up…</string>
    <string name="i_agree">I\'ve read and agreed to the terms and conditions</string>
    <string name="eula_disagree">You did not agree to the terms and conditions</string>
    <string name="choose_attachment_type">select attachment type</string>
    <string name="voicememo">Voice Message</string>
    <string name="picmsg">Picture Message</string>
    <string name="pickpicture">Photo gallery</string>
    <string name="takepicture">Take a photo</string>
    <string name="choose_photo_source">Source of photo</string>
    <string name="setting">Setting</string>
    <string name="setting_more">More Settings</string>
    <string name="server_ip">Server IP</string>
    <string name="checkout">View</string>
    <string name="reply">Reply</string>
    <string name="close">Close</string>
    <string name="ignore">Ignore</string>
    <string name="delete_confirm">Confirm Deletion</string>
    <string name="delete_thread_confirm">Delete this conversation thread?</string>
    <string name="in_progress">Processing…</string>
    <string name="in_call">in call…</string>
    <string name="fafayou_in_call">AireTalk is in call</string>
    <string name="answercallhint">slide to answer</string>
    <string name="end_call">End</string>
    <string name="hide_keypad">Hide</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="unknown_person">Unknown Contact</string>
    <string name="missed_call">Missed call</string>
    <string name="unanswered_call">Unanswered</string>
    <string name="call_duration">Duration</string>
    <string name="incoming_call">Incoming</string>
    <string name="outgoing_call">Dialed</string>
    <string name="phone_call">Dialer</string>
    <string name="username">Username</string>
    <string name="phonenumber">Phone number</string>
    <string name="password">Password</string>
    <string name="password_confirm">Confirm password</string>
    <string name="email">Email</string>
    <string name="email_hint">Email required</string>
    <string name="register_immediately">Sign Up</string>
    <string name="forget_password">Forget password?</string>
    <string name="passwords_dont_match">Sorry, passwords don\'t match</string>
    <string name="password_error">Sorry, password is incorrect</string>
    <string name="nonmember">Sorry, you are not an AireTalk member. Please register first.</string>
    <string name="username_invalid">Sorry, this username is invalid. Must start with a lower case alphabet and be at least 6 characters.</string>
    <string name="phonenumber_hint">Phone number recommended</string>
    <string name="phonenumber_invalid">Sorry, the phone number you input is incorrect</string>
    <string name="email_invalid">Sorry, the Email address is invalid</string>
    <string name="login_title">Log In</string>
    <string name="account_exists">AireTalk account already exists, please login</string>
    <string name="retrieve_password">Retrieve password by your Email?</string>
    <string name="waiting_for_sms_to_register">Registering via verification SMS has been sent.\nPlease wait…</string>
    <string name="sms_confirm_timeout">Verification timeout, please make sure the phone number is correct and try it again</string>
    <string name="welcome">Welcome to AireTalk</string>
    <string name="username_hint">Username (at least 6 letters)</string>
    <string name="airplane_mode">Please turn off Airplane Mode</string>
    <string name="dial_this">Call</string>
    <string name="delete_thread">Delete Conversation Thread</string>
    <string name="delete_msg">Delete message</string>
    <string name="view_contact">More</string>
    <string name="add_contact">Add Contact</string>
    <string name="pickup_contact">Pick Contacts</string>
    <string name="surname">Last Name</string>
    <string name="name">Name</string>
    <string name="input_hint">Phone number to call</string>
    <string name="location_not_found">Location not found</string>
    <string name="nonmember_no_service">Contact not a member</string>
    <string name="msg_is_sent">Message Sent</string>
    <string name="making_call">Calling</string>
    <string name="call_connected">Connected</string>
    <string name="call_end">Call End</string>
    <string name="call_declined">Line busy</string>
    <string name="no_response">No Response</string>
    <string name="callee_not_found">Please try later</string>
    <string name="new_version_found">New version %s is available now, please upgrade.</string>
    <string name="force_update">You must upgrade AireTalk to latest version.</string>
    <string name="dont_worry">Don\'t worry, your data will not be affected.</string>
    <string name="update">Update</string>
    <string name="request_location_sharing">Request permission to share location? (Once agreed, your locations will be shared for an hour)</string>
    <string name="sharing_location_request"> is requesting that you share each other\'s location for one hour. Allow?</string>
    <string name="sharing_done">Location shared successfully</string>
    <string name="displayname">Display Name</string>
    <string name="photo_gallery">Photo Gallery</string>
    <string name="friends">Friends</string>
    <string name="copysms">Copy</string>
    <string name="copied_to_clipboard">Copied to Clipboard</string>
    <string name="mylocation_address">My Location</string>
    <string name="friend_address">Location</string>
    <string name="keypad">Keypad</string>
    <string name="track">Track</string>
    <string name="traffic">Traffic</string>
    <string name="satellite">Satellite</string>
    <string name="delete_the_contact">Delete the contact</string>
    <string name="delete">Delete</string>
    <string name="back">Back</string>
    <string name="mute">mute</string>
    <string name="speaker">speaker</string>
    <string name="add_call">add call</string>
    <string name="hold">hold</string>
    <string name="missed_call_remind_1">You got %d missed call(s) from</string>
    <string name="missed_call_remind_2">, %s. AireTalk reminds you to reply the important calls.</string>
    <string name="pcode_desc">You might have received a verification SMS, please enter the 4-digit number:</string>
    <string name="help">Help</string>
    <string name="img_error">Invalid picture</string>
    <string name="email_register">We\'ve sent a verification mail to your Email address, please activate your AireTalk account.</string>
    <string name="login_error">Sorry, server is busy. Please wait for a moment, AireTalk will log in automatically.</string>
    <string name="pwdemail_title">Input your phone number or username, we\'ll immediately send the password to your Email address.</string>
    <string name="pwdemailfailed">Sending Password Email failed</string>
    <string name="pwdemailsuccess">Email has been sent successfully</string>
    <string name="no_sdcard">No SD Card or USB Storage Connected</string>
    <string name="no_sdcard_receive_voice_message">no SD Card to receive voice message</string>
    <string name="no_sdcard_receive_picture_message">no SD Card to receive the picture</string>
    <string name="sms_manager">Manage SMS</string>
    <string name="try_again">try again later</string>
    <string name="share">Share Aire…</string>
    <string name="smile">Smileys</string>
    <string name="smiletitle">Emot\'icon</string>
    <string name="keypad_menu_open">Key Tone On</string>
    <string name="keypad_menu_close">Key Tone Off</string>
    <string name="setnet">Go To</string>
    <string name="add">Add</string>
    <string name="auto_notify_joins">I am using AireTalk now! Please call me with this great app from now on! It\'s free! B-}</string>
    <string name="international_sms_alert">This might be an international SMS, are you sure to continue?</string>
    <string name="call">Call</string>
    <string name="notification_sound">Notification Sound</string>
    <string name="receive_vibrate">Vibrate</string>
    <string name="send_vibrate">Sending Vibrate</string>
    <string name="smspopup">Message Pop-up</string>
    <string name="pcode_check">Please enter 4-digit number</string>
    <string name="net_error">No network connection…</string>
    <string name="shownotification">Notification Icon</string>
    <string name="agree_share_sms">I agree with you to share my location for %1$s.</string>
    <string name="ask_share">(Location sharing request sent B-})</string>
    <string name="photo_large">The photo is too big, cannot be sent.</string>
    <string name="savedraft">Saved as draft</string>
    <string name="hasaskshare">%1$s asks for location sharing with you</string>
    <string name="helper_name1">Support</string>
    <string name="interphone_smile">Voice</string>
    <string name="send_voice_interphone">Hold to talk</string>
    <string name="fafauser_sms">SMS</string>
    <string name="fafauser_vmemo">Voice</string>
    <string name="fafauser_pic">Media</string>
    <string name="fafauser_map">Locate</string>
    <string name="hint_mood">Status Message</string>
    <string name="sms_parese_stringbuf">Got %2$s from %1$s</string>
    <string name="videomemo">Video</string>
    <string name="filememo">File Transfer</string>
    <string name="chose_file">Choose a file to send</string>
    <string name="makesure_phonenumber_1">We are going to send a verification SMS to:</string>
    <string name="makesure_phonenumber_2">Please make sure the number is correct.</string>
    <string name="add_photo">add\nphoto</string>
    <string name="nickname">Name</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="search">Search Friends</string>
    <string name="aire_free_call">AireCall</string>
    <string name="sortview">Sort View</string>
    <string name="sortbyname">Sort by name</string>
    <string name="sortbytime">Sort by time</string>
    <string name="sortbystatus">Sort by status</string>
    <string name="read_contacts_check">Read your phonebook to search</string>
    <string name="feedback_desc">Please advise, AireTalk can be better. Do you like AireTalk?</string>
    <string name="favor_level_1">Yes, I like it!</string>
    <string name="favor_level_2">Not bad :-)</string>
    <string name="favor_level_3">So so</string>
    <string name="favor_level_4">Not very good</string>
    <string name="favor_level_5">I don\'t like it</string>
    <string name="aire_studio">Studio</string>
    <string name="create_group">Create a Group</string>
    <string name="group_name">Group Name</string>
    <string name="group_desc">Please assign the name for your group, and choose members. All the members will receive the messages at the same time.</string>
    <string name="conference_2">Conference</string>
</resources>