<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
	<item 
	    android:id="@+id/gosettings" 
		android:title="@string/setting"
		android:icon="@android:drawable/ic_menu_preferences"/>
	<item 
	    android:id="@+id/gosearch" 
		android:title="@string/search"
		android:icon="@android:drawable/ic_menu_search"/>
	<item 
		android:id="@+id/sortmode" 
		android:title="@string/sortview" 
		android:icon="@android:drawable/ic_dialog_dialer"/>
	<item 
		android:id="@+id/sortbyname" 
		android:title="@string/sortbyname" 
		android:icon="@android:drawable/ic_menu_sort_alphabetically"/>
	<item 
		android:id="@+id/sortbytime" 
		android:title="@string/sortbytime"
		android:icon="@android:drawable/ic_menu_recent_history"/>
	<item 
	    android:id="@+id/sortbystatus" 
		android:title="@string/sortbystatus"
		android:icon="@android:drawable/ic_menu_view"/>
</menu>
