<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/blankbackground" >

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="20dp" >

            <TextView
                android:id="@+id/suggilove_desc"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:gravity="left"
                android:padding="10dp"
                android:text="@string/feedback_desc"
                android:textColor="#808080"
                android:textSize="15sp" />

            <RadioGroup
                android:id="@+id/sugg_ilove_radiogroup"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:orientation="vertical">
                
                <RadioButton
                    android:id="@+id/sugg_ilove_rb1"
                    android:layout_width="fill_parent"
                    android:text="@string/favor_level_1"
                    android:layout_height="wrap_content"
                    android:textColor="#007192" />

                <RadioButton
                    android:id="@+id/sugg_ilove_rb2"
                    android:layout_width="fill_parent"
                    android:text="@string/favor_level_2"
                    android:layout_height="wrap_content"
                    android:textColor="#007192" />
                
                <RadioButton
                    android:id="@+id/sugg_ilove_rb3"
                    android:layout_width="fill_parent"
                    android:text="@string/favor_level_3"
                    android:layout_height="wrap_content"
                    android:textColor="#007192" />
                
                <RadioButton
                    android:id="@+id/sugg_ilove_rb4"
                    android:layout_width="fill_parent"
                    android:text="@string/favor_level_4"
                    android:layout_height="wrap_content"
                    android:textColor="#007192" />
                
                <RadioButton
                    android:id="@+id/sugg_ilove_rb5"
                    android:layout_width="fill_parent"
                    android:text="@string/favor_level_5"
                    android:layout_height="wrap_content"
                    android:textColor="#007192" />
                    
            </RadioGroup>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                android:gravity="center">

                <Button
                    android:id="@+id/cancel"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/plainbtn"
                    android:layout_margin="10dp"
                    android:text="@string/cancel"
                    android:textColor="#f0f0f0"
                    android:padding="10dp"
                    android:layout_weight="1"
                    android:textSize="17sp"/>
              
                <Button
                    android:id="@+id/next"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:background="@drawable/plainbtn"
                    android:text="@string/next"
                    android:textColor="#f0f0f0"
                    android:layout_weight="1"
                    android:padding="10dp"
                    android:textSize="17sp"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>