<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent">
	
    <LinearLayout
        android:layout_alignParentTop="true"
        android:orientation="vertical"
        android:layout_width="fill_parent"
		android:layout_height="wrap_content">
        
		<TextView 
			android:gravity="center"
			android:textColor="#cceeeeee"
			android:textSize="20sp"
			android:text="@string/makesure_phonenumber_1"
			android:layout_marginTop="30dp"
			android:layout_marginLeft="10dp"
			android:layout_marginRight="10dp"
			android:padding="10dp"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"/>
			
		<TextView 
			android:id="@+id/msgcontent"
			android:gravity="center"
			android:textColor="#ffffff"
			android:textSize="24sp"
			android:layout_marginTop="4sp"
			android:layout_marginLeft="10sp"
			android:layout_marginRight="10sp"
			android:padding="3dp"
			android:maxLines="2"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"/>
		
		<TextView 
			android:gravity="center"
			android:textColor="#cceeeeee"
			android:textSize="20sp"
			android:text="@string/makesure_phonenumber_2"
			android:layout_marginTop="20dp"
			android:layout_marginLeft="10dp"
			android:layout_marginRight="10dp"
			android:padding="6dp"
			android:maxLines="2"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"/>
	
	</LinearLayout>
		
	<LinearLayout
	    android:layout_alignParentBottom="true"
	    android:orientation="horizontal"
	    android:layout_width="fill_parent"
		android:layout_height="wrap_content">
		<Button 
			android:id="@+id/cancel" 
			android:text="@string/cancel"
			android:textSize="20sp"
			android:gravity="center"
			android:layout_weight="1"
			android:layout_margin="8dip"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"/>
		
		<Button 
			android:id="@+id/done" 
			android:text="@string/next"
			android:textSize="20sp"
			android:gravity="center"
			android:layout_weight="1"
			android:layout_margin="8dip"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"/>
	
	</LinearLayout>
</RelativeLayout>