<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical"
	android:background="@drawable/blankbackground"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent">
	
    <FrameLayout
	    android:id="@+id/title"
		android:layout_gravity="top"
		android:background="@drawable/titlebar"
		android:layout_width="fill_parent" 
		android:layout_height="50dp">
		<RelativeLayout 
		    android:layout_width="fill_parent"
			android:layout_height="fill_parent">
			<ImageView
			    android:id="@+id/cancel" 
			    android:src="@drawable/back"
			    android:background="@drawable/optionbtn"
				android:padding="10dp"
				android:layout_centerVertical="true"
				android:layout_alignParentLeft="true" 
				android:layout_width="50dp"
				android:layout_height="50dp"/>
			<TextView 
			    android:id="@+id/topic" 
			    android:textColor="#FFFFFFFF"
				android:maxWidth="200dp" 
				android:ellipsize="end"
				android:singleLine="true" 
				android:textSize="18sp"
				android:textStyle="bold" 
				android:shadowColor="#80000000"
		  	  	android:shadowDx="1"
		  	  	android:shadowDy="2"
		  	  	android:shadowRadius="2"
		  	  	android:text="@string/create_group"
				android:layout_centerInParent="true"
				android:layout_width="wrap_content" 
				android:layout_height="wrap_content"/>
		</RelativeLayout>
	</FrameLayout>

	<ScrollView 
		android:layout_width="fill_parent"
		android:layout_height="fill_parent">
		<LinearLayout 
			android:orientation="vertical"
			android:paddingRight="8dp"
			android:paddingLeft="8dp"
			android:gravity="center"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content">
		
			<TextView 
				android:id="@+id/id_desc" 
				android:textColor="#808080"
				android:textSize="15sp"
				android:text="@string/group_desc"
				android:gravity="center"
				android:padding="10dp"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"/>
			
			<RelativeLayout
				android:gravity="center"
				android:layout_marginBottom="5dp"
				android:layout_width="wrap_content" 
				android:layout_height="wrap_content">
			  	
				<ImageView
					android:id="@+id/photo"
					android:clickable="true"
					android:background="@drawable/group_bg"
					android:padding="8dp"
					android:layout_width="96dp"
					android:layout_height="96dp"/>
				<TextView
				    android:id="@+id/my_photo_hint"
				    android:text="@string/add_photo"
				    android:gravity="center"
				  	android:layout_width="96dp"
				  	android:layout_height="96dp"/>
			</RelativeLayout>
			
			<LinearLayout 
			    android:paddingLeft="20dp"
			    android:paddingRight="20dp"
			    android:gravity="center_horizontal"
			    android:orientation="vertical"
			    android:layout_width="fill_parent"
				android:layout_height="wrap_content">
				
			<EditText android:id="@+id/nickname"
				android:hint="@string/group_name"
				android:layout_marginTop="20dp"
				android:textColor="#007192"
				android:background="#00ffffff"
				android:gravity="center"
				android:paddingBottom="5dp"
				android:singleLine="true"
				android:inputType="textPersonName"
				android:maxLength="128"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"/>
			
			<View
		    	android:background="#50909090"
		    	android:layout_marginBottom="10dp"
		   		android:layout_width="fill_parent"
				android:layout_height="1dp"/>
			
		    <RelativeLayout
	            android:id="@+id/picked"
				android:paddingTop="10dp"
				android:paddingBottom="10dp"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"/>
			
			<Button android:id="@+id/pickup"
				android:layout_margin="10dp"
				android:text="@string/pickup_contact"
				android:background="@drawable/plainbtn"
				android:textColor="#f0f0f0"
				android:textSize="17sp"
				android:minWidth="235dp"
				android:layout_width="wrap_content" 
				android:layout_height="46dp"/>
			
			<Button android:id="@+id/done"
				android:layout_margin="10dp"
				android:text="@string/done"
				android:enabled="false"
				android:background="@drawable/plainbtn"
				android:textColor="#f0f0f0"
				android:textSize="17sp"
				android:minWidth="235dp"
				android:layout_width="wrap_content" 
				android:layout_height="46dp"/>
			</LinearLayout>
			
		</LinearLayout>
	</ScrollView>
</LinearLayout>